# mohadang-cmake-template

./: .gitignore  CMakeLists.txt  README.md  hello-cmake-test
include/hello-cmake/: utils.h
src/: CMakeLists.txt  Makefile  cmake_install.cmake  main.cpp  utils.cpp
tests/: CMakeLists.txt  Makefile  cmake_install.cmake  testa.cpp
